# slicerag

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/: project.yaml
agents/rules/: 00-L2-common.md  10-L3-govail-memory.md  10-L3-slicerag.md  rules.md
contracts/examples/: memory-search-response.example.json
contracts/schemas/: memory-search-response.schema.json
docs/: api.md  architecture.md  gateway-integration.md  postgres-runbook.md  schema.md
migrations/: 001_init_pgvector.sql  002_add_version.sql  003_reject_reserved_project_id.sql
scratch/: evaluate_rag.py  ingest_docs.py  rag_viewer.html
src/slicerag/: auth.py  chunking.py  config.py  embedding.py  ids.py  main.py  models.py  postgres_store.py  store.py  store_factory.py  store_protocol.py
tests/: test_internal_api.py
